Displaying database items

--- a/todolist/templates/todolist/index.html
+++ b/todolist/templates/todolist/index.html
@@ -57,9 +57,9 @@
 							{% if todolist.completed %}
 							<li class="list-group-item todo-completed">{{todolist.text}}</li>
 							{% else %}
-							<a href="{% url 'completed' todolist.id %}"><li class="list-group-item ">{{todolist.text}}</li></a>
+							<a href="#"><li class="list-group-item">{{todolist.text}}</li></a>
 							{% endif %}
-						    {% endfor %}
+							{% endfor %}
 						
 					</ul>
 				</div>
