--- a/todolist/templates/todolist/index.html
+++ b/todolist/templates/todolist/index.html
@@ -21,7 +21,7 @@
 				<div class="col-lg-4 col-lg-offset-4" id="content">
 					<h1>What to do today </h1>
 					
-					<form method="POST" role="form">
+					<form action="{% url 'add' %}" method="POST" role="form">
 						{% csrf_token %}					
 						<div class="form-group">
 							<div class="input-group">
@@ -37,13 +37,13 @@
 						<div class="col-lg-12">
 							<div class="btn-toolbar">
 								<div class="btn-group">
-									
+									<a href="{% url 'deletecompleted'%}">
 									<button type="button" class="btn btn-warning">
 										<i class="glyphicon glyphicon-trash"></i> DELETE COMPLETED
 									</button></a>
 								</div>
 								<div class="btn-group">
-										
+										<a href="{% url 'deleteall' %}">
 									<button type="button" class="btn btn-danger">
 										<i class="glyphicon glyphicon-trash"></i> DELETE ALL
 									</button></a>
@@ -57,9 +57,9 @@
 							{% if todolist.completed %}
 							<li class="list-group-item todo-completed">{{todolist.text}}</li>
 							{% else %}
-							<a href="#"><li class="list-group-item">{{todolist.text}}</li></a>
+							<a href="{% url 'completed' todolist.id %}"><li class="list-group-item ">{{todolist.text}}</li></a>
 							{% endif %}
-							{% endfor %}
+						    {% endfor %}
 						
 					</ul>
 				</div>
